--- a/modules/program.yaml
+++ b/modules/program.yaml
@@ -84,4 +84,4 @@
   on_ft: [go,typescript,javascript,vim,rust,markdown]
   hook_source: |
     let g:sonictemplate_postfix_key = '<C-j>'
-    let g:sonictemplate_vim_template_dir = $VIM_PATH . '/template'
+    let g:sonictemplate_vim_template_dir = getenv("HOME") . '/.config/nvim/template'
