--- a/modules/textobj.yaml
+++ b/modules/textobj.yaml
@@ -30,6 +30,10 @@
 
 - repo: kana/vim-niceblock
   on_map: { x: <Plug> }
+  hook_add: |
+    silent! xmap I  <Plug>(niceblock-I)
+    silent! xmap gI <Plug>(niceblock-gI)
+    silent! xmap A  <Plug>(niceblock-A)
 
 - repo: kana/vim-textobj-function
   on_map: { ox: <Plug> }
