--- a/modules/appearance.yaml
+++ b/modules/appearance.yaml
@@ -8,6 +8,8 @@
     let g:spaceline_git_branch_icon = ' '
     let g:spaceline_custom_diff_icon = [' ',' ',' ']
     let g:spaceline_function_icon = '☀️ '
+    let g:spaceline_diagnostic_tool = 'nvim_lsp'
+    let g:spaceline_diff_tool = 'git-gutter'
 
 - repo: hardcoreplayers/vim-buffet
   on_event: [BufReadPre,BufNewFile]
