--- a/modules/version.yaml
+++ b/modules/version.yaml
@@ -11,3 +11,18 @@
       startinsert
     endfunction
 
+
+- repo: airblade/vim-gitgutter
+  on_event: [BufReadPre,BufNewFile]
+  hook_source: |-
+    let g:gitgutter_map_keys = 0
+    let g:gitgutter_sign_added = '▋'
+    let g:gitgutter_sign_modified = '▋'
+    let g:gitgutter_sign_removed = '▋'
+    let g:gitgutter_sign_removed_first_line = '▘'
+    let g:gitgutter_sign_removed_above_and_below = '_¯'
+    let g:gitgutter_sign_modified_removed = '▍'
+    let g:gitgutter_preview_win_floating = 1
+    let g:gitgutter_sign_allow_clobber = 0
+    let g:gitgutter_sign_priority = 0
+    let g:gitgutter_override_sign_column_highlight = 0
