--- a/modules/completion.yaml
+++ b/modules/completion.yaml
@@ -1,7 +1,7 @@
 
 - repo: nvim-lua/completion-nvim
   on_event: InsertEnter
-  hook_source: |
+  hook_add: |
     let g:completion_chain_complete_list = {
             \ 'default': {
             \   'default': [
@@ -12,6 +12,8 @@
             \ }
     let g:completion_enable_snippet = 'vim-vsnip'
     let g:completion_confirm_key = ""
+  hook_source: |
+    lua require'completion'.on_attach()
 
 - repo: hrsh7th/vim-vsnip
   on_event: InsertCharPre
