--- a/modules/completion.yaml
+++ b/modules/completion.yaml
@@ -1,4 +1,3 @@
-
 - repo: nvim-lua/completion-nvim
   on_event: InsertEnter
   hook_add: |
@@ -27,3 +26,16 @@
   hook_source: |
     let g:sonictemplate_postfix_key = '<C-j>'
     let g:sonictemplate_vim_template_dir = getenv("HOME") . '/.config/nvim/template'
+
+- repo: Raimondi/delimitMate
+  on_event: FileType
+  hook_source: |
+    let g:delimitMate_expand_cr = 0
+    let g:delimitMate_expand_space = 1
+    let g:delimitMate_smart_quotes = 1
+    let g:delimitMate_expand_inside_quotes = 0
+    augroup user_plugin_delimitMate
+      au!
+      au FileType python let b:delimitMate_nesting_quotes = ['"', "'"]
+      au FileType markdown let b:delimitMate_nesting_quotes = ["`"]
+    augroup END
