--- a/modules/enhance.yaml
+++ b/modules/enhance.yaml
@@ -1,5 +1,4 @@
 - repo: Shougo/dein.vim
-  on_func: dein#
 
 - { repo: rhysd/accelerated-jk, on_map: { n: <Plug> } }
 
@@ -50,35 +49,11 @@
     EOF
 
 - repo: luochen1990/rainbow
-  on_ft:
-    [
-      html,
-      css,
-      javascript,
-      javascriptreact,
-      go,
-      python,
-      lua,
-      rust,
-      vim,
-      less,
-      stylus,
-      sass,
-      scss,
-      json,
-      ruby,
-      toml,
-    ]
+  on_ft: [html, css, javascript, javascriptreact,go,lua,rust,vim,less,sass,json,toml]
   hook_source: let g:rainbow_active = 1
 
 - repo: voldikss/vim-floaterm
-  on_cmd:
-    [FloatermNew, FloatermToggle, FloatermPrev, FloatermNext, FloatermSend]
+  on_cmd: [FloatermNew, FloatermToggle, FloatermPrev, FloatermNext, FloatermSend]
   hook_source: |
     let g:floaterm_position = 'center'
     let g:floaterm_wintype = 'floating'
-
-    " Set floaterm window's background to black
-    hi Floaterm guibg=black
-    " Set floating window border line color to cyan, and background to orange
-    hi FloatermBorder guibg=none guifg=cyan
