--- a/modules/completion.yaml
+++ b/modules/completion.yaml
@@ -2,7 +2,7 @@
   on_event: InsertEnter
   hook_add: |
     let g:completion_auto_change_source = 1
-    let g:completion_matching_strategy_list = ['substring', 'fuzzy', 'exact','all']
+    let g:completion_matching_ignore_case = 1
     let g:completion_chain_complete_list = {
             \ 'default': {
             \   'default': [
