--- a/modules/version.yaml
+++ b/modules/version.yaml
@@ -21,7 +21,7 @@
     let g:gitgutter_sign_removed = '▋'
     let g:gitgutter_sign_removed_first_line = '▘'
     let g:gitgutter_sign_removed_above_and_below = '_¯'
-    let g:gitgutter_sign_modified_removed = '▍'
+    let g:gitgutter_sign_modified_removed = '▋'
     let g:gitgutter_preview_win_floating = 1
     let g:gitgutter_sign_allow_clobber = 0
     let g:gitgutter_sign_priority = 0
