--- a/modules/completion.yaml
+++ b/modules/completion.yaml
@@ -10,6 +10,7 @@
   on_event: InsertCharPre
   hook_source: |
     let g:vsnip_snippet_dir = getenv("HOME") . "/.config/nvim/snippets"
+    let g:vsnip_filetypes.typescriptreact = ['ts-react']
 
 - repo: hrsh7th/vim-vsnip-integ
   on_event: InsertCharPre
