use vim-gitgutter

--- a/modules/appearance.yaml
+++ b/modules/appearance.yaml
@@ -9,6 +9,7 @@
     let g:spaceline_custom_diff_icon = [' ',' ',' ']
     let g:spaceline_function_icon = '☀️ '
     let g:spaceline_diagnostic_tool = 'nvim_lsp'
+    let g:spaceline_diff_tool = 'git-gutter'
 
 - repo: hardcoreplayers/vim-buffet
   on_event: [BufReadPre,BufNewFile]
