--- a/modules/program.yaml
+++ b/modules/program.yaml
@@ -62,13 +62,11 @@
   on_event: [BufReadPost, BufWritePost]
   hook_source: |
     let g:gutentags_cache_dir = getenv("HOME").'/.cache/vim/tags'
-    let g:gutentags_project_root = ['.root', '.git', '.svn', '.hg', '.project','go.mod','/usr/local']
+    let g:gutentags_project_root = ['.root', '.git', '.svn','.project','go.mod','.Cargo.toml','tsconfig.js','jsconfig.js']
     let g:gutentags_generate_on_write = 0
     let g:gutentags_generate_on_missing = 0
     let g:gutentags_generate_on_new = 0
     let g:gutentags_exclude_filetypes = [ 'defx', 'denite', 'vista', 'magit' ]
-    let g:gutentags_ctags_extra_args = ['--output-format=e-ctags']
-    let g:gutentags_ctags_exclude = ['*.json', '*.js', '*.ts', '*.jsx', '*.css', '*.less', '*.sass', '*.go', '*.dart', 'node_modules', 'dist', 'vendor']
 
 - repo: mattn/emmet-vim
   on_event: InsertEnter
