--- a/modules/enhance.yaml
+++ b/modules/enhance.yaml
@@ -49,7 +49,7 @@
     EOF
 
 - repo: luochen1990/rainbow
-  on_ft: [html, css, javascript, javascriptreact,go,lua,rust,vim,less,sass,json,toml]
+  on_ft: [html, css, javascript, javascriptreact,go,rust,vim,less,sass,json,toml]
   hook_source: let g:rainbow_active = 1
 
 - repo: voldikss/vim-floaterm
