--- a/modules/version.yaml
+++ b/modules/version.yaml
@@ -19,3 +19,4 @@
     let g:signify_sign_change = '▋'
     let g:signify_sign_delete = '▋'
     let g:signify_sign_delete_first_line = '▘'
+    let g:signify_sign_show_count = 0
