--- a/modules/filetype.yaml
+++ b/modules/filetype.yaml
@@ -13,6 +13,9 @@
 - repo: hardcoreplayers/go-nvim
   on_ft: [ go, gomod ]
 
+- repo: ziglang/zig.vim
+  on_ft: [zig,zir]
+
 - repo: ekalinin/Dockerfile.vim
   on_ft: [Dockerfile, docker-compose]
 
