--- a/modules/enhance.yaml
+++ b/modules/enhance.yaml
@@ -2,17 +2,8 @@
 
 - { repo: rhysd/accelerated-jk, on_map: { n: <Plug> } }
 
-- repo: simnalamburt/vim-mundo
-  on_cmd: MundoToggle
-
-- repo: easymotion/vim-easymotion
-  on_map: { n: <Plug> }
-  hook_source: |
-    let g:EasyMotion_do_mapping = 0
-    let g:EasyMotion_prompt = 'Jump to → '
-    let g:EasyMotion_keys = 'fjdkswbeoavn'
-    let g:EasyMotion_smartcase = 1
-    let g:EasyMotion_use_smartsign_us = 1
+- repo: sjl/gundo.vim
+  on_cmd: GundoToggle
 
 - repo: norcalli/nvim-colorizer.lua
   if: has('nvim-0.4')
