--- a/modules/filetype.yaml
+++ b/modules/filetype.yaml
@@ -26,7 +26,7 @@
     require'nvim-treesitter.configs'.setup {
         highlight = {
           enable = true,
-          disable = {go},
+          disable = {"go"},
         },
         textobjects = {
           select = {
