--- a/modules/completion.yaml
+++ b/modules/completion.yaml
@@ -9,7 +9,7 @@
         \  {'complete_items': ['lsp']},
         \  {'complete_items': ['snippet']},
         \  {'complete_items': ['buffers']},
-        \  {'complete_items': ['path'],'triggered_only' = ['/']},
+        \  {'complete_items': ['path'],'triggered_only': ['/']},
         \  {'mode': '<c-p>'},
         \  {'mode': '<c-n>'}
       \]
