--- a/modules/completion.yaml
+++ b/modules/completion.yaml
@@ -6,10 +6,10 @@
     let g:completion_enable_snippet = 'vim-vsnip'
     let g:completion_confirm_key = ""
     let g:completion_chain_complete_list = [
-        \  {'complete_items': ['path'],'triggered_only': ['/']},
         \  {'complete_items': ['lsp']},
         \  {'complete_items': ['snippet']},
         \  {'complete_items': ['buffers']},
+        \  {'complete_items': ['path']},
         \  {'mode': '<c-p>'},
         \  {'mode': '<c-n>'}
       \]
