--- a/modules/filetype.yaml
+++ b/modules/filetype.yaml
@@ -7,9 +7,6 @@
 - repo: MaxMEllon/vim-jsx-pretty
   on_ft: [javascriptreact, typescriptreact]
 
-- repo: rust-lang/rust.vim
-  on_ft: rust
-
 - repo: hardcoreplayers/go-nvim
   on_ft: [ go, gomod ]
 
@@ -20,7 +17,7 @@
   on_ft: [Dockerfile, docker-compose]
 
 - repo: nvim-treesitter/nvim-treesitter
-  on_ft: [typescript,lua,go,markdown]
+  on_ft: [typescript,lua,go,markdown,rust,toml]
   hook_source: |
     lua <<EOF
     require'nvim-treesitter.configs'.setup {
