--- a/modules/filetype.yaml
+++ b/modules/filetype.yaml
@@ -17,7 +17,7 @@
   on_ft: [Dockerfile, docker-compose]
 
 - repo: nvim-treesitter/nvim-treesitter
-  on_ft: [typescript,lua,go,markdown,rust,toml]
+  on_ft: [html,css,typescript,lua,go,rust,toml]
   hook_source: |
     lua <<EOF
     require'nvim-treesitter.configs'.setup {
