--- a/modules/filetype.yaml
+++ b/modules/filetype.yaml
@@ -7,6 +7,9 @@
 - repo: MaxMEllon/vim-jsx-pretty
   on_ft: [javascriptreact, typescriptreact]
 
+- repo: rust-lang/rust.vim
+  on_ft: rust
+
 - repo: hardcoreplayers/go-nvim
   on_ft: [ go, gomod ]
 
@@ -23,7 +26,7 @@
     require'nvim-treesitter.configs'.setup {
         highlight = {
           enable = true,
-          disable = {"go"},
+          disable = {"go,rust"},
         },
         textobjects = {
           select = {
