--- a/modules/filetype.yaml
+++ b/modules/filetype.yaml
@@ -1,12 +1,6 @@
 - repo: Shougo/context_filetype.vim
   on_event: BufReadPost
 
-- repo: HerringtonDarkholme/yats.vim
-  on_ft: [typescript, typescriptreact]
-
-- repo: MaxMEllon/vim-jsx-pretty
-  on_ft: [javascriptreact, typescriptreact]
-
 - repo: ziglang/zig.vim
   on_ft: [zig,zir]
 
@@ -14,7 +8,7 @@
   on_ft: [Dockerfile, docker-compose]
 
 - repo: nvim-treesitter/nvim-treesitter
-  on_ft: [html,css,typescript,lua,go,rust,toml]
+  on_ft: [html,css,typescript,typescriptreact,lua,go,rust,toml]
   hook_source: |
     lua <<EOF
     require'nvim-treesitter.configs'.setup {
