--- a/modules/filetype.yaml
+++ b/modules/filetype.yaml
@@ -8,7 +8,7 @@
   on_ft: [Dockerfile, docker-compose]
 
 - repo: nvim-treesitter/nvim-treesitter
-  on_ft: [html,css,typescript,typescriptreact,lua,go,rust,toml]
+  on_event: BufRead
   hook_source: |
     lua <<EOF
     require'nvim-treesitter.configs'.setup {
