--- a/modules/appearance.yaml
+++ b/modules/appearance.yaml
@@ -1,7 +1,8 @@
-- repo: ryanoasis/vim-devicons
+- repo: kyazdani42/nvim-web-devicons
 
 - repo: glepnir/spaceline.vim
   on_event: [BufReadPre,BufNewFile]
+  depends: nvim-web-devicons
   hook_add: |
     let g:spaceline_diagnostic_errorsign = ' '
     let g:spaceline_diagnostic_warnsign = ' '
@@ -11,24 +12,35 @@
     let g:spaceline_diagnostic_tool = 'nvim_lsp'
     let g:spaceline_diff_tool = 'vim-signify'
 
-- repo: hardcoreplayers/vim-buffet
-  on_event: [BufReadPre,BufNewFile]
-
-# - repo: Akin909/nvim-bufferline.lua
-#   hook_source: |
-#     lua << EOF
-#     require'bufferline'.setup{
-#         options = {
-#           view = "multiwindow",
-#           mappings = true ,
-#           max_name_length = 15,
-#           tab_size = 15,
-#           show_buffer_close_icons = false,
-#           separator_style = "thick",
-#           enforce_regular_tabs = false,
-#         };
-#       }
-#     EOF
+- repo: Akin909/nvim-bufferline.lua
+  depends: nvim-web-devicons
+  hook_add: |
+    lua << EOF
+    vim.g.bufferline_modified_icon = '✥'
+    require'bufferline'.setup{
+        options = {
+          show_buffer_close_icons = false,
+          mappings = true,
+          always_show_bufferline = false,
+        };
+        highlights = {
+          bufferline_tab_selected_separator = {
+            guifg = "#4989c9",
+            guibg = normal_bg,
+          };
+          bufferline_separator = {
+            guibg = background_color,
+          };
+          bufferline_selected_indicator = {
+            guifg = "#4989c9",
+          };
+          bufferline_selected = {
+            guifg = normal_fg,
+            gui = "bold",
+          };
+        };
+      }
+    EOF
 
 - repo: glepnir/dashboard-nvim
   hook_source: |
