--- a/modules/filetype.yaml
+++ b/modules/filetype.yaml
@@ -2,7 +2,7 @@
   on_event: BufReadPost
 
 - repo: ziglang/zig.vim
-  on_ft: [zig,zir]
+  on_ft: [zig, zir]
 
 - repo: ekalinin/Dockerfile.vim
   on_ft: [Dockerfile, docker-compose]
@@ -14,6 +14,7 @@
     require'nvim-treesitter.configs'.setup {
         highlight = {
           enable = true,
+          disable = {'markdown'},
         },
         textobjects = {
           select = {
