--- a/modules/appearance.yaml
+++ b/modules/appearance.yaml
@@ -44,7 +44,10 @@
 
 - repo: glepnir/dashboard-nvim
   hook_source: |
-    let g:dashboard_default_header = 'commicgirl5'
+    let g:dashboard_preview_command = 'cat'
+    let g:dashboard_preview_file = getenv('HOME') . '/.config/nvim/neovim.cat'
+    let g:dashboard_preview_file_height = 10
+    let g:dashboard_preview_file_width = 80
     let g:dashboard_default_executive ='clap'
     let g:dashboard_custom_section = {
       \ 'last_session'        :{
