--- a/modules/completion.yaml
+++ b/modules/completion.yaml
@@ -1,5 +1,5 @@
 - repo: nvim-lua/completion-nvim
-  on_event: InsertEnter
+  on_event: [BufReadPre,BufNewFile]
   hook_add: |
     let g:completion_enable_auto_hover = 0
     let g:completion_auto_change_source = 1
@@ -14,7 +14,8 @@
         \  {'mode': '<c-p>'},
         \  {'mode': '<c-n>'}
       \]
-  hook_source: lua require('completion').on_attach()
+  hook_source: |
+      autocmd BufReadPre,BufNewFile * lua require'completion'.on_attach()
 
 - repo: steelsojka/completion-buffers
   on_source: completion-nvim
