add reaact support

--- a/modules/filetype.yaml
+++ b/modules/filetype.yaml
@@ -15,6 +15,9 @@
         highlight = {
           enable = true,
         },
+        indent = {
+          enable = true,
+        },
         textobjects = {
           select = {
             enable = true,
