--- a/modules/appearance.yaml
+++ b/modules/appearance.yaml
@@ -54,8 +54,7 @@
       \}
 
 - repo: kyazdani42/nvim-tree.lua
-  on_cmd: [LuaTreeToggle,LuaTreeOpen]
-  hook_add: |
+  hook_source: |
     let g:lua_tree_hide_dotfiles = 1
     let g:lua_tree_indent_markers = 1
     let g:lua_tree_bindings = {
