--- a/modules/fuzzyfind.yaml
+++ b/modules/fuzzyfind.yaml
@@ -1,5 +1,5 @@
 - repo: nvim-lua/telescope.nvim
-  on_cmd: [TelescopeFindFile,TelescopeLiveGrep,TelescopeOldFiles,TelescopeBuffers,TelescopeHelpTags]
+  on_cmd: Telescope
 
 - repo: nvim-lua/popup.nvim
   on_source: telescope.nvim
