--- a/modules/program.yaml
+++ b/modules/program.yaml
@@ -15,20 +15,26 @@
 - repo: editorconfig/editorconfig-vim
   on_ft: [go, typescript, javascript, vim, rust, markdown]
 
-
-# - repo: yuntan/neovim-indent-guides
-- repo: nathanaelkane/vim-indent-guides
+- repo: glepnir/indent-guides.nvim
   on_event: BufReadPre
-  hook_post_source: IndentGuidesEnable
-  hook_add: |-
-    let g:indent_guides_default_mapping = 0
-    let g:indent_guides_tab_guides = 0
-    let g:indent_guides_color_change_percent = 3
-    let g:indent_guides_guide_size = 1
-    let g:indent_guides_exclude_filetypes = [
-      \ 'help', 'defx', 'denite', 'denite-filter', 'startify',
-      \ 'vista', 'vista_kind', 'tagbar', 'lsp-hover', 'clap_input',
-      \ 'any-jump', 'gina-status', 'gina-commit', 'dashboard','terminal']
+  hook_source: |-
+    lua <<EOF
+      require('indent_guides').default_opts.indent_guide_size =1
+      require('indent_guides').default_opts.exclude_filetypes = {'defx','vista'}
+    EOF
+
+# - repo: nathanaelkane/vim-indent-guides
+#   on_event: BufReadPre
+#   hook_post_source: IndentGuidesEnable
+#   hook_add: |-
+#     let g:indent_guides_default_mapping = 0
+#     let g:indent_guides_tab_guides = 0
+#     let g:indent_guides_color_change_percent = 3
+#     let g:indent_guides_guide_size = 1
+#     let g:indent_guides_exclude_filetypes = [
+#       \ 'help', 'defx', 'denite', 'denite-filter', 'startify',
+#       \ 'vista', 'vista_kind', 'tagbar', 'lsp-hover', 'clap_input',
+#       \ 'any-jump', 'gina-status', 'gina-commit', 'dashboard','terminal']
 
 - repo: tyru/caw.vim
   depends: context_filetype.vim
