--- a/modules/appearance.yaml
+++ b/modules/appearance.yaml
@@ -24,8 +24,9 @@
 - repo: glepnir/dashboard-nvim
   hook_source: |
     let g:dashboard_preview_command = 'cat'
-    let g:dashboard_preview_file = getenv('HOME') . '/.config/nvim/neovim.cat'
-    let g:dashboard_preview_file_height = 10
+    let g:dashboard_preview_pipeline = 'lolcat'
+    let g:dashboard_preview_file = getenv('HOME') . '/.config/nvim/staic/tiger.txt'
+    let g:dashboard_preview_file_height = 20
     let g:dashboard_preview_file_width = 80
     let g:dashboard_default_executive ='telescope'
     let g:dashboard_custom_section = {
