update formatter config

--- a/modules/program.yaml
+++ b/modules/program.yaml
@@ -89,23 +89,26 @@
   hook_source: |
     lua <<EOF
       require('formatter').setup({
-        typescriptreact = {
-            prettier = function()
-              return {
-                exe = "prettier",
-                args = {"--stdin-filepath", vim.api.nvim_buf_get_name(0), '--single-quote'},
-                stdin = true
-              }
-            end
-        },
-        lua = {
-            luafmt = function()
-              return {
-                exe = "luafmt",
-                args = {"--indent-count", 2, "--stdin"},
-                stdin = true
+        logging = false,
+        filetype = {
+          typescriptreact = {
+              prettier = function()
+                return {
+                  exe = "prettier",
+                  args = {"--stdin-filepath", vim.api.nvim_buf_get_name(0), '--single-quote'},
+                  stdin = true
                 }
               end
-            }
+          },
+          lua = {
+              luafmt = function()
+                return {
+                  exe = "luafmt",
+                  args = {"--indent-count", 2, "--stdin"},
+                  stdin = true
+                  }
+                end
+              }
+          }
         })
     EOF
