--- a/modules/completion.yaml
+++ b/modules/completion.yaml
@@ -20,7 +20,7 @@
 - repo: steelsojka/completion-buffers
   on_source: completion-nvim
   hook_source: |
-    let g:completion_word_ignored_ft = ['defx','vista']
+    let g:completion_word_ignored_ft = ['LuaTree','vista']
 
 - repo: hrsh7th/vim-vsnip
   on_event: InsertCharPre
