--- a/modules/appearance.yaml
+++ b/modules/appearance.yaml
@@ -53,14 +53,14 @@
 
 - repo: kyazdani42/nvim-tree.lua
   hook_source: |
-    let g:lua_tree_hide_dotfiles = 1
-    let g:lua_tree_indent_markers = 1
-    let g:lua_tree_bindings = {
+    let g:nvim_tree_hide_dotfiles = 1
+    let g:nvim_tree_indent_markers = 1
+    let g:nvim_tree_bindings = {
       \ 'edit':            ['<CR>', 'l'],
       \ 'edit_vsplit':     's',
       \ 'edit_split':      'i',
       \}
-    let g:lua_tree_icons = {
+    let g:nvim_tree_icons = {
       \ 'default': '',
       \ 'symlink': '',
       \ 'git': {
