--- a/modules/filetype.yaml
+++ b/modules/filetype.yaml
@@ -8,6 +8,8 @@
   on_event: BufRead
   hook_source: |
     lua <<EOF
+    vim.api.nvim_command('set foldmethod=expr')
+    vim.api.nvim_command('set foldexpr=nvim_treesitter#foldexpr()')
     require'nvim-treesitter.configs'.setup {
         highlight = {
           enable = true,
