add telescope dotfiles support

--- a/modules/fuzzyfind.yaml
+++ b/modules/fuzzyfind.yaml
@@ -11,6 +11,7 @@
           }
       }
       require('telescope').load_extension('fzy_native')
+      require'telescope'.load_extension('dotfiles')
     EOF
 
 - repo: nvim-telescope/telescope-fzy-native.nvim
