--- a/modules/appearance.yaml
+++ b/modules/appearance.yaml
@@ -45,7 +45,7 @@
           \ 'command': 'DashboardFindWord'},
       \ 'find_dotfiles'       :{
           \ 'description': ['  Open Personal dotfiles                  SPC f d'],
-          \ 'command': 'Clap dotfiles'},
+          \ 'command': "lua require'telescope'.extensions.dotfiles.dotfiles{path=os.getenv('HOME')..'/.dotfiles'}"},
       \ 'go_source'           :{
           \ 'description': ['  Find Go Source Code                     SPC f s'],
           \ 'command': 'Clap gosource'},
