check server excutable file exist

--- a/modules/program.yaml
+++ b/modules/program.yaml
@@ -19,6 +19,7 @@
   on_event: BufReadPre
 
 - repo: tyru/caw.vim
+  depends: context_filetype.vim
   on_map: { nx: <Plug> }
   hook_add: |
     function! InitCaw() abort
